# stepper-synth

./: .gitmodules  CMakeLists.txt
common/: flash.sh  syscalls.c  sysmem.c  toolchain.cmake
devices/stm32f407vg/: linker_script.ld  options.cmake
devices/stm32g431c8/: linker_script.ld  options.cmake
workspace/: CMakeLists.txt  common.cpp  common.hpp  main.c  main.cpp  midi.hpp  midi_packet_manager.c  project.cmake  synth.cpp  synth.hpp  test.cpp  tusb_config.h  usb_descriptors.c
